--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "openai": "^4.20.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
